adding initial files

--- a/Web.config
+++ b/Web.config
@@ -5,7 +5,7 @@
         <authentication mode="Forms">
             <forms>
                 <credentials passwordFormat="Clear">
-                    <user name="Alice" password="secret" />
+                    <user name="Test User" password="DemoTestPass" />
                 </credentials>
             </forms>
         </authentication>
